feat: add view all to rooms section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Sona, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Royshield Hotels</title>
+    <title>Royshire Cantina Hotels</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
@@ -95,8 +95,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i> (12) 345 67890</li>
-                            <li><i class="fa fa-envelope"></i> info@royshieldhotels.com</li>
+                            <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
+                            <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshire_cantina@gmail.com" class="text-decoration-none text-reset">info.royshire_cantina@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -107,7 +107,7 @@
                                 <a href="#"><i class="fa fa-tripadvisor"></i></a>
                                 <a href="#"><i class="fa fa-instagram"></i></a>
                             </div>
-                            <a href="#booking-your-hotel" class="bk-btn">Booking Now</a>
+                            <a href="#booking-your-hotel" class="bk-btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -159,9 +159,9 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="hero-text">
-                        <h1>Royshield Hotels and Suites</h1>
+                        <h1>Royshire Cantina Hotels</h1>
                         <p>We cater to your comfort with our luxury rooms and event spaces at affordable rates.</p>
-                        <a href="#" class="primary-btn">Discover Now</a>
+                        <a href="./rooms.html" class="primary-btn">Discover Now</a>
                     </div>
                 </div>
                 <div id="booking-your-hotel" class="col-xl-4 col-lg-5 offset-xl-2 offset-lg-1">
@@ -179,17 +179,25 @@
                                 <i class="icon_calendar"></i>
                             </div>
                             <div class="select-option">
-                                <label for="guest">Guests:</label>
+                                <label for="guest">Number of Guests:</label>
                                 <select id="guest">
-                                    <option value="">2 Adults</option>
-                                    <option value="">3 Adults</option>
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                    <option value="">4</option>
+                                    <option value="">5</option>
                                 </select>
                             </div>
                             <div class="select-option">
                                 <label for="room">Room:</label>
                                 <select id="room">
-                                    <option value="">1 Room</option>
-                                    <option value="">2 Room</option>
+                                    <option value="">Diamond</option>
+                                    <option value="">Emerald</option>
+                                    <option value="">Topaz</option>
+                                    <option value="">Ruby</option>
+                                    <option value="">Garnet</option>
+                                    <option value="">Peridot</option>
+                                    <option value="">Pearl</option>
                                 </select>
                             </div>
                             <button type="submit">Check Availability</button>
@@ -214,12 +222,12 @@
                     <div class="about-text">
                         <div class="section-title">
                             <span>About Us</span>
-                            <h2>Royshield <br />Hotels and Suites</h2>
+                            <h2>Royshire Cantina <br />Hotels</h2>
                         </div>
-                        <p class="f-para">Royshield Hotels and Suites is a leading lorem ipsum dolor sit amet. Phasellus eu risus mi. Maecenas ex velit, iaculis ut tincidunt a, fermentum pulvinar est.</p>
+                        <p class="f-para">Royshire Cantina Hotels is a leading lorem ipsum dolor sit amet. Phasellus eu risus mi. Maecenas ex velit, iaculis ut tincidunt a, fermentum pulvinar est.</p>
                         <p class="s-para">When it comes to booking the perfect hotel, vacation rental, resort,
                             apartment, guest house, or tree house, we’ve got you covered.</p>
-                        <a href="#" class="primary-btn about-btn">Read More</a>
+                        <a href="./about-us.html" class="primary-btn about-btn">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -312,8 +320,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="hp-room-item set-bg" data-setbg="img/room/room-b1.jpg">
                             <div class="hr-text">
-                                <h3>Double Room</h3>
-                                <h2>199$<span>/Pernight</span></h2>
+                                <h3>Diamond</h3>
+                                <h2>&#8358;18,000<span>/Pernight</span></h2>
                                 <table>
                                     <tbody>
                                         <tr>
@@ -341,17 +349,17 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="hp-room-item set-bg" data-setbg="img/room/room-b2.jpg">
                             <div class="hr-text">
-                                <h3>Premium King Room</h3>
-                                <h2>159$<span>/Pernight</span></h2>
+                                <h3>Emerald</h3>
+                                <h2>&#8358;15,000<span>/Pernight</span></h2>
                                 <table>
                                     <tbody>
                                         <tr>
                                             <td class="r-o">Size:</td>
-                                            <td>30 ft</td>
+                                            <td>20 ft</td>
                                         </tr>
                                         <tr>
                                             <td class="r-o">Capacity:</td>
-                                            <td>Max persion 5</td>
+                                            <td>Max persion 3</td>
                                         </tr>
                                         <tr>
                                             <td class="r-o">Bed:</td>
@@ -370,21 +378,21 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="hp-room-item set-bg" data-setbg="img/room/room-b3.jpg">
                             <div class="hr-text">
-                                <h3>Deluxe Room</h3>
-                                <h2>198$<span>/Pernight</span></h2>
+                                <h3>Pearl</h3>
+                                <h2>&#8358;12,000<span>/Pernight</span></h2>
                                 <table>
                                     <tbody>
                                         <tr>
                                             <td class="r-o">Size:</td>
-                                            <td>30 ft</td>
+                                            <td>12 ft</td>
                                         </tr>
                                         <tr>
                                             <td class="r-o">Capacity:</td>
-                                            <td>Max persion 5</td>
+                                            <td>Max persion 2</td>
                                         </tr>
                                         <tr>
                                             <td class="r-o">Bed:</td>
-                                            <td>King Beds</td>
+                                            <td>Comfy Beds</td>
                                         </tr>
                                         <tr>
                                             <td class="r-o">Services:</td>
@@ -398,30 +406,8 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="hp-room-item set-bg" data-setbg="img/room/room-b4.jpg">
-                            <div class="hr-text">
-                                <h3>Family Room</h3>
-                                <h2>299$<span>/Pernight</span></h2>
-                                <table>
-                                    <tbody>
-                                        <tr>
-                                            <td class="r-o">Size:</td>
-                                            <td>30 ft</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="r-o">Capacity:</td>
-                                            <td>Max persion 5</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="r-o">Bed:</td>
-                                            <td>King Beds</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="r-o">Services:</td>
-                                            <td>Wifi, Television, Bathroom,...</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <a href="#" class="primary-btn">More Details</a>
+                            <div class="hp-room-item-view-all">
+                                <a href="./rooms.html"><h2 class="hr-text-view-all">View all <span class="text-light">→</span></h2></a>
                             </div>
                         </div>
                     </div>
@@ -560,7 +546,7 @@
                                     <img src="img/footer-logo.png" alt="">
                                 </a>
                             </div>
-                            <p>We inspire and reach millions of travelers<br /> across 90 local websites</p>
+                            <p>We cater to your comfort with our luxury rooms and event spaces at affordable rates.</p>
                             <div class="fa-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -574,9 +560,9 @@
                         <div class="ft-contact">
                             <h6>Contact Us</h6>
                             <ul>
-                                <li>(12) 345 67890</li>
-                                <li>info.colorlib@gmail.com</li>
-                                <li>856 Cordia Extension Apt. 356, Lake, United State</li>
+                                <li>(234) 814 9075 815</li>
+                                <li>info.royshire_cantina@gmail.com</li>
+                                <li>Bamgbopa Street, Iyana Ipaja, Lagos.</li>
                             </ul>
                         </div>
                     </div>
@@ -606,7 +592,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Royshire Cantina Hotels. All rights reserved.
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                     </div>
                 </div>
