feat: add all rooms to our rooms page

--- a/rooms.html
+++ b/rooms.html
@@ -95,8 +95,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i> (12) 345 67890</li>
-                            <li><i class="fa fa-envelope"></i> info.colorlib@gmail.com</li>
+                            <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
+                            <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshire_cantina@gmail.com" class="text-decoration-none text-reset">info.royshire_cantina@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -189,8 +189,8 @@
                     <div class="room-item">
                         <img src="img/room/room-1.jpg" alt="">
                         <div class="ri-text">
-                            <h4>Premium King Room</h4>
-                            <h3>159$<span>/Pernight</span></h3>
+                            <h4>Diamond</h4>
+                            <h3>&#8358;18,000<span>/Pernight</span></h3>
                             <table>
                                 <tbody>
                                     <tr>
@@ -219,8 +219,8 @@
                     <div class="room-item">
                         <img src="img/room/room-2.jpg" alt="">
                         <div class="ri-text">
-                            <h4>Deluxe Room</h4>
-                            <h3>159$<span>/Pernight</span></h3>
+                            <h4>Emerald</h4>
+                            <h3>&#8358;15,000<span>/Pernight</span></h3>
                             <table>
                                 <tbody>
                                     <tr>
@@ -249,8 +249,8 @@
                     <div class="room-item">
                         <img src="img/room/room-3.jpg" alt="">
                         <div class="ri-text">
-                            <h4>Double Room</h4>
-                            <h3>159$<span>/Pernight</span></h3>
+                            <h4>Topaz</h4>
+                            <h3>&#8358;15,000<span>/Pernight</span></h3>
                             <table>
                                 <tbody>
                                     <tr>
@@ -279,8 +279,8 @@
                     <div class="room-item">
                         <img src="img/room/room-4.jpg" alt="">
                         <div class="ri-text">
-                            <h4>Luxury Room</h4>
-                            <h3>159$<span>/Pernight</span></h3>
+                            <h4>Ruby</h4>
+                            <h3>&#8358;12,000<span>/Pernight</span></h3>
                             <table>
                                 <tbody>
                                     <tr>
@@ -309,8 +309,8 @@
                     <div class="room-item">
                         <img src="img/room/room-5.jpg" alt="">
                         <div class="ri-text">
-                            <h4>Room With View</h4>
-                            <h3>159$<span>/Pernight</span></h3>
+                            <h4>Garnet</h4>
+                            <h3>&#8358;12,000<span>/Pernight</span></h3>
                             <table>
                                 <tbody>
                                     <tr>
@@ -339,8 +339,8 @@
                     <div class="room-item">
                         <img src="img/room/room-6.jpg" alt="">
                         <div class="ri-text">
-                            <h4>Small View</h4>
-                            <h3>159$<span>/Pernight</span></h3>
+                            <h4>Peridot</h4>
+                            <h3>&#8358;12,000<span>/Pernight</span></h3>
                             <table>
                                 <tbody>
                                     <tr>
@@ -365,13 +365,43 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12">
+                <div class="col-lg-4 col-md-6">
+                    <div class="room-item">
+                        <img src="img/room/room-6.jpg" alt="">
+                        <div class="ri-text">
+                            <h4>Pearl</h4>
+                            <h3>&#8358;12,000<span>/Pernight</span></h3>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td class="r-o">Size:</td>
+                                        <td>30 ft</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="r-o">Capacity:</td>
+                                        <td>Max persion 2</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="r-o">Bed:</td>
+                                        <td>King Beds</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="r-o">Services:</td>
+                                        <td>Wifi, Television, Bathroom,...</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <a href="#" class="primary-btn">More Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-12">
                     <div class="room-pagination">
                         <a href="#">1</a>
                         <a href="#">2</a>
                         <a href="#">Next <i class="fa fa-long-arrow-right"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
