--- a/about-us.html
+++ b/about-us.html
@@ -95,8 +95,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i> (12) 345 67890</li>
-                            <li><i class="fa fa-envelope"></i> info.colorlib@gmail.com</li>
+                            <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
+                            <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshire_cantina@gmail.com" class="text-decoration-none text-reset">info.royshire_cantina@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -188,7 +188,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="ap-title">
-                            <h2>Welcome To Sona.</h2>
+                            <h2>Royshire Cantina Hotels</h2>
                             <p>Built in 1910 during the Belle Epoque period, this hotel is located in the center of
                                 Paris, with easy access to the city’s tourist attractions. It offers tastefully
                                 decorated rooms.</p>
@@ -310,7 +310,7 @@
                                     <img src="img/footer-logo.png" alt="">
                                 </a>
                             </div>
-                            <p>We inspire and reach millions of travelers<br /> across 90 local websites</p>
+                            <p>We cater to your comfort with our luxury rooms and event spaces at affordable rates.</p>
                             <div class="fa-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -324,9 +324,9 @@
                         <div class="ft-contact">
                             <h6>Contact Us</h6>
                             <ul>
-                                <li>(12) 345 67890</li>
-                                <li>info.colorlib@gmail.com</li>
-                                <li>856 Cordia Extension Apt. 356, Lake, United State</li>
+                                <li>(234) 814 9075 815</li>
+                                <li>info.royshire_cantina@gmail.com</li>
+                                <li>Bamgbopa Street, Iyana Ipaja, Lagos.</li>
                             </ul>
                         </div>
                     </div>
@@ -356,7 +356,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Royshire Cantina Hotels. All rights reserved.
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                     </div>
                 </div>
