feat: add diamond room page

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <a href="#" class="primary-btn">More Details</a>
+                                <a href="./room-diamond.html" class="primary-btn">More Details</a>
                             </div>
                         </div>
                     </div>
