feat: room detail breadcrumb

--- a/room-diamond.html
+++ b/room-diamond.html
@@ -172,7 +172,8 @@
                         <h2>Our Rooms</h2>
                         <div class="bt-option">
                             <a href="./home.html">Home</a>
-                            <span>Rooms</span>
+                            <a href="./rooms.html">Rooms</a>
+                            <span>Diamond Room</span>
                         </div>
                     </div>
                 </div>
