feat: add rooms detail menu links

--- a/room-diamond.html
+++ b/room-diamond.html
@@ -138,17 +138,18 @@
                             <nav class="mainmenu">
                                 <ul>
                                     <li><a href="./index.html">Home</a></li>
-                                    <li class="active"><a href="./rooms.html">Rooms</a></li>
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./pages.html">Pages</a>
+                                    <li class="active"><a href="./rooms.html">Rooms</a>
                                         <ul class="dropdown">
-                                            <li><a href="./room-details.html">Room Details</a></li>
-                                            <li><a href="./blog-details.html">Blog Details</a></li>
-                                            <li><a href="#">Family Room</a></li>
-                                            <li><a href="#">Premium Room</a></li>
+                                            <li><a href="./room-diamond.html">Diamond</a></li>
+                                            <li><a href="./room-emerald.html">Emerald</a></li>
+                                            <li><a href="./room-topaz.html">Topaz</a></li>
+                                            <li><a href="./room-ruby.html">Ruby</a></li>
+                                            <li><a href="./room-garnet.html">Garnet</a></li>
+                                            <li><a href="./room-peridot.html">Peridot</a></li>
+                                            <li><a href="./room-pearl.html">Pearl</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="./blog.html">News</a></li>
+                                    <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./contact.html">Contact</a></li>
                                 </ul>
                             </nav>
