--- a/contact.html
+++ b/contact.html
@@ -89,14 +89,14 @@
     <!-- Offcanvas Menu Section End -->
 
     <!-- Header Section Begin -->
-    <header class="header-section header-normal">
+    <header class="header-section">
         <div class="top-nav">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i> (12) 345 67890</li>
-                            <li><i class="fa fa-envelope"></i> info.colorlib@gmail.com</li>
+                            <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
+                            <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshire_cantina@gmail.com" class="text-decoration-none text-reset">info.royshire_cantina@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -107,17 +107,7 @@
                                 <a href="#"><i class="fa fa-tripadvisor"></i></a>
                                 <a href="#"><i class="fa fa-instagram"></i></a>
                             </div>
-                            <a href="#" class="bk-btn">Booking Now</a>
-                            <div class="language-option">
-                                <img src="img/flag.jpg" alt="">
-                                <span>EN <i class="fa fa-angle-down"></i></span>
-                                <div class="flag-dropdown">
-                                    <ul>
-                                        <li><a href="#">Zi</a></li>
-                                        <li><a href="#">Fr</a></li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <a href="#booking-your-hotel" class="bk-btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -138,17 +128,18 @@
                             <nav class="mainmenu">
                                 <ul>
                                     <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./rooms.html">Rooms</a></li>
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./pages.html">Pages</a>
+                                    <li><a href="./rooms.html">Rooms</a>
                                         <ul class="dropdown">
-                                            <li><a href="./room-details.html">Room Details</a></li>
-                                            <li><a href="./blog-details.html">Blog Details</a></li>
-                                            <li><a href="#">Family Room</a></li>
-                                            <li><a href="#">Premium Room</a></li>
+                                            <li><a href="./room-diamond.html">Diamond</a></li>
+                                            <li><a href="./room-emerald.html">Emerald</a></li>
+                                            <li><a href="./room-topaz.html">Topaz</a></li>
+                                            <li><a href="./room-ruby.html">Ruby</a></li>
+                                            <li><a href="./room-garnet.html">Garnet</a></li>
+                                            <li><a href="./room-peridot.html">Peridot</a></li>
+                                            <li><a href="./room-pearl.html">Pearl</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="./blog.html">News</a></li>
+                                    <li><a href="./about-us.html">About Us</a></li>
                                     <li class="active"><a href="./contact.html">Contact</a></li>
                                 </ul>
                             </nav>
@@ -176,15 +167,15 @@
                             <tbody>
                                 <tr>
                                     <td class="c-o">Address:</td>
-                                    <td>856 Cordia Extension Apt. 356, Lake, US</td>
+                                    <td>Bamgbopa Street, Iyana Ipaja, Lagos</td>
                                 </tr>
                                 <tr>
                                     <td class="c-o">Phone:</td>
-                                    <td>(12) 345 67890</td>
+                                    <td>(234) 814 9075 815</td>
                                 </tr>
                                 <tr>
                                     <td class="c-o">Email:</td>
-                                    <td>info.colorlib@gmail.com</td>
+                                    <td>info.royshire_cantina@gmail.com</td>
                                 </tr>
                                 <tr>
                                     <td class="c-o">Fax:</td>
@@ -213,7 +204,7 @@
             </div>
             <div class="map">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.0606825994123!2d-72.8735845851828!3d40.760690042573295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e85b24c9274c91%3A0xf310d41b791bcb71!2sWilliam%20Floyd%20Pkwy%2C%20Mastic%20Beach%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1578582744646!5m2!1sen!2sbd"
+                    src="https://maps.google.com/maps?q=bamgbopa+street&t=&z=17&ie=UTF8&iwloc=&output=embed"
                     height="470" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
@@ -232,7 +223,7 @@
                                     <img src="img/footer-logo.png" alt="">
                                 </a>
                             </div>
-                            <p>We inspire and reach millions of travelers<br /> across 90 local websites</p>
+                            <p>We cater to your comfort with our luxury rooms and event spaces at affordable rates.</p>
                             <div class="fa-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -246,9 +237,9 @@
                         <div class="ft-contact">
                             <h6>Contact Us</h6>
                             <ul>
-                                <li>(12) 345 67890</li>
-                                <li>info.colorlib@gmail.com</li>
-                                <li>856 Cordia Extension Apt. 356, Lake, United State</li>
+                                <li>(234) 814 9075 815</li>
+                                <li>info.royshire_cantina@gmail.com</li>
+                                <li>Bamgbopa Street, Iyana Ipaja, Lagos.</li>
                             </ul>
                         </div>
                     </div>
@@ -278,7 +269,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Royshire Cantina Hotels. All rights reserved.
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                     </div>
                 </div>
