--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -96,7 +96,7 @@
                     <div class="col-lg-6">
                         <ul class="tn-left">
                             <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
-                            <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshire_cantina@gmail.com" class="text-decoration-none text-reset">info.royshire_cantina@gmail.com</a></li>
+                            <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshirecantina@gmail.com" class="text-decoration-none text-reset">info.royshirecantina@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -325,9 +325,9 @@
                         <div class="ft-contact">
                             <h6>Contact Us</h6>
                             <ul>
-                                <li>(234) 814 9075 815</li>
-                                <li>info.royshire_cantina@gmail.com</li>
-                                <li>Bamgbopa Street, Iyana Ipaja, Lagos.</li>
+                                <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
+                                <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshirecantina@gmail.com" class="text-decoration-none text-reset">info.royshirecantina@gmail.com</a></li>
+                                <li><i class="fa fa-map-marker"></i> Bamgbopa Street, Iyana Ipaja, Lagos.</li>
                             </ul>
                         </div>
                     </div>
