--- a/blog-details.html
+++ b/blog-details.html
@@ -389,9 +389,9 @@
                         <div class="ft-contact">
                             <h6>Contact Us</h6>
                             <ul>
-                                <li>(12) 345 67890</li>
-                                <li>info.colorlib@gmail.com</li>
-                                <li>856 Cordia Extension Apt. 356, Lake, United State</li>
+                                <li><i class="fa fa-phone"></i> <a href="tel:+2348149075815" class="text-decoration-none text-reset">(234) 814 9075 815</a></li>
+                                <li><i class="fa fa-envelope"></i> <a href="mailto:info.royshirecantina@gmail.com" class="text-decoration-none text-reset">info.royshirecantina@gmail.com</a></li>
+                                <li><i class="fa fa-map-marker"></i> Bamgbopa Street, Iyana Ipaja, Lagos.</li>
                             </ul>
                         </div>
                     </div>
