feat: add about text

--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@
                             <span>About Us</span>
                             <h2>Royshire Cantina <br />Hotels</h2>
                         </div>
-                        <p class="f-para">Royshire Cantina Hotels is a leading lorem ipsum dolor sit amet. Phasellus eu risus mi. Maecenas ex velit, iaculis ut tincidunt a, fermentum pulvinar est.</p>
-                        <p class="s-para">When it comes to booking the perfect hotel, vacation rental, resort,
-                            apartment, guest house, or tree house, we’ve got you covered.</p>
+                        <p class="f-para">Welcome to Royshire Cantina Hotels, where luxury meets comfort. Nestled in the heart of vibrant locales, our hotels offer a perfect blend of modern elegance and personalized service.</p>
+                        <p class="s-para">Whether you're here for business or leisure, experience a sanctuary of tranquility and sophistication.</p>
                         <a href="./about-us.html" class="primary-btn about-btn">Read More</a>
                     </div>
                 </div>
@@ -264,48 +263,42 @@
                     <div class="service-item">
                         <i class="flaticon-026-bed"></i>
                         <h4>Lodging</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna.</p>
+                        <p>Immerse yourself in luxurious comfort and style, where every room is a retreat.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="service-item">
                         <i class="flaticon-012-cocktail"></i>
                         <h4>Bar</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna.</p>
+                        <p>Sip and savor in our chic bar, where crafted cocktails and a vibrant ambiance create unforgettable moments.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="service-item">
                         <i class="flaticon-007-swimming-pool"></i>
                         <h4>Clubbing</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna.</p>
+                        <p>Dance the night away in our dynamic club, where beats and energy collide for an electrifying experience.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="service-item">
                         <i class="flaticon-045-door"></i>
                         <h4>Event Hall</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna.</p>
+                        <p>Elevate your occasions in our versatile event hall, a perfect canvas for celebrations, ceremonies, and milestones.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="service-item">
                         <i class="flaticon-020-telephone"></i>
                         <h4>Conference Room</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna.</p>
+                        <p>We provide a state-of-the-art conference room, designed for productive meetings and seamless collaboration.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="service-item">
                         <i class="flaticon-033-dinner"></i>
                         <h4>Outdoor Catering</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna.</p>
+                        <p>We offer exquisite outdoor catering, where culinary artistry meets the beauty of al fresco dining.</p>
                     </div>
                 </div>
             </div>
